Changes: middle image , text , breedcrump,order cancel, delivery module added

--- a/src/administration/admins/templates/admins/order_detail.html
+++ b/src/administration/admins/templates/admins/order_detail.html
@@ -68,7 +68,7 @@
                                 </th>
                                 <th class="bg-primary text-white text-right">
                                     <b>
-                                        Free
+                                        {{object.shipping}}
                                     </b>
                                 </th>
                             </tr>
