--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col-lg-4 text-end">
                     <ul class="header-dropdown">
-                        <li class="mobile-wishlist"><a href="#"><i aria-hidden="true" class="fa fa-heart"></i></a>
+                        <li class="mobile-wishlist"><a href="{% url 'client:wishlist' %}"><i aria-hidden="true" class="fa fa-heart"></i></a>
                         </li>
                         <li class="onhover-dropdown mobile-account">
                             <i aria-hidden="true" class="fa fa-user"></i> My Account
