--- a/src/website/templates/website/contact_us.html
+++ b/src/website/templates/website/contact_us.html
@@ -12,8 +12,7 @@
                 <div class="col-sm-6">
                     <nav aria-label="breadcrumb" class="theme-breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">contact</li>
+
                         </ol>
                     </nav>
                 </div>
@@ -29,23 +28,23 @@
                         <div class="form-row row">
                             <div class="col-md-6">
                                 <label for="name">First Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="Enter Your name" required="">
+                                <input type="text" class="form-control" id="name" name="first_name" placeholder="Enter Your name" required="">
                             </div>
                             <div class="col-md-6">
                                 <label for="email">Last Name</label>
-                                <input type="text" class="form-control" id="last-name" placeholder="Email" required="">
+                                <input type="text" class="form-control" id="last-name" name="last_name" placeholder="Email" required="">
                             </div>
                             <div class="col-md-6">
-                                <label for="review">Phone number</label>
-                                <input type="text" class="form-control" id="review" placeholder="Enter your number" required="">
+                                <label for="phone">Phone number</label>
+                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter your number" required="">
                             </div>
                             <div class="col-md-6">
                                 <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email" placeholder="Email" required="">
+                                <input type="text" class="form-control" id="email"  name="email" placeholder="Email" required="">
                             </div>
                             <div class="col-md-12">
                                 <label for="review">Write Your Message</label>
-                                <textarea class="form-control" placeholder="Write Your Message" id="exampleFormControlTextarea1" rows="6"></textarea>
+                                <textarea class="form-control" placeholder="Write Your Message"  name="message" id="review" rows="6"></textarea>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-solid" type="submit">Send Your Message</button>
