--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -8,102 +8,148 @@
 }
 
 
+h2{
+  text-align:center;
+  padding: 20px;
+}
+/* Slider */
+
+.slick-slide {
+    margin: 0px 20px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider
+{
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+            user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
 
 
 </style>
-<style>
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-
-</style>
 
 
-<div class=" effect-cls">
-    {% if slider %}
-    {% for slider in slider %}
-    <div class="mySlides fade">
-        <div class="numbertext"></div>
-        <img src="{{slider.image.url}}" style="height:550px;width:100%">
-        <div class="text"></div>
+<div class="splide" id="splide">
+    <div class="splide__track">
+        <ul class="splide__list">
+            {% for slide in slider %}
+            <li class="splide__slide">
+                {% if slider.link %}
+                <a href="{{slide.link}}"><img alt="Slide" height="100%" src="{{slide.image.url}}"></a>
+                {% else %}
+                <a href="#"><img alt="Slide" height="600px" width="100%" src="{{slide.image.url}}"></a>
+                {% endif %}
+
+            </li>
+            {% endfor %}
+        </ul>
     </div>
-    {% endfor %}
-    {% else %}
-    <div class="mySlides fade">
-        <div class="numbertext"></div>
-        <img src="{% static 'website/bg/slider2.jpg' %}" style="height:550px;width:100%">
-        <div class="text"></div>
-    </div>
-    {% endif %}
-
 </div>
-<br>
-
-<div style="text-align:center">
-    {% for slider in slider %}
-    <span class="dot"></span>
-    {% endfor %}
-</div>
-
 
 <!-- Home slider -->
 <!-- Home slider end -->
@@ -118,7 +164,7 @@ img {vertical-align: middle;}
                     <div class="collection-banner p-left text-start">
                         <div class="img">
                             {% if banner %}
-                            <img src="{{banner.image.url}}" style="height:350px;width:100%">
+                            <img src="{{banner.image.url}}" style="height:230px;width:100%">
 
                             {% else %}
                             <img alt=""
@@ -148,7 +194,6 @@ img {vertical-align: middle;}
     </div>
 </div>
 <!-- Paragraph end -->
-
 
 <!-- Product slider -->
 <section class="game-product pt-0 ratio_asos">
@@ -258,7 +303,7 @@ img {vertical-align: middle;}
                 <div class="col">
                     <div class="banner-contain">
                         <h2>2023</h2>
-                        <h3>Light Novel and Manga Releases</h3>
+                        <h3>Light Novel and Mangas </h3>
                         <h4>releases</h4>
                     </div>
                 </div>
@@ -339,54 +384,32 @@ img {vertical-align: middle;}
     <h2 class="title-inner1">Digital Platforms</h2>
 </div>
 <!--  logo section -->
-<section class="section-b-space">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="slide-6 no-arrow">
-                    <div>
-                        <div class="logo-block">
-                            <a href="#">
-                                <img alt="" height="100px" src="{% static 'website/images/home/Amazon-Kindle-logo.png' %}">
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="logo-block">
-                            <a href="#">
-                                <img alt="" height="90px" src="{% static 'website/images/home/Apple Books.jpg' %}">
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="logo-block">
-                            <a href="#">
-                                <img alt="" height="90px" src="{% static 'website/images/home/bookwalker.png' %}">
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="logo-block mx-5">
-                            <a href="#">
-                                <img alt="" height="75px" src="{% static 'website/images/home/Google-Play-Books-logo.png' %}">
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="logo-block mx-5">
-                            <a href="#">
-                                <img alt="" height="80px"  src="{% static 'website/images/home/Kobo-logo.jpg' %}">
-                            </a>
-                        </div>
-                    </div>
+{% if digital_platform %}
 
-                </div>
-            </div>
-        </div>
+<div class="container">
+    <section class="customer-logos slider">
+        <div class="slide"><a href="#"><img src="{% static 'website/images/home/Kobo-logo.jpg' %}"
+                                            style="height:150px;width:150px;"></a></div>
+
+
+    </section>
+</div>
+{% else %}
+<div class="row justify-content-center">
+    <div class="col-12-sm">
+        <h3 class="text-danger text-center">Not have any Digital Platform</h3>
+
     </div>
-</section>
-<!--  logo section end-->
 
+</div>
+{% endif %}
+
+<!--  logo section end-->
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+<script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js "></script>
+<script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js "></script>
+<link href=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css " rel="stylesheet">
 <script>
 let slideIndex = 0;
 showSlides();
@@ -408,5 +431,47 @@ function showSlides() {
   setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 
+
+
 </script>
+
+<script>
+var splide = new Splide( '.splide', {
+  type   : 'loop',
+  padding: '5rem',
+    autoplay: true,
+
+} );
+
+splide.mount();
+
+
+</script>
+
+<script>
+    $(document).ready(function(){
+    $('.customer-logos').slick({
+        slidesToShow: 6,
+        slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 1500,
+        arrows: false,
+        dots: false,
+        pauseOnHover: false,
+        responsive: [{
+            breakpoint: 768,
+            settings: {
+                slidesToShow: 4
+            }
+        }, {
+            breakpoint: 520,
+            settings: {
+                slidesToShow: 3
+            }
+        }]
+    });
+});
+
+</script>
+
 {% endblock %}
