Changes Made on Design

--- a/src/website/templates/website/about.html
+++ b/src/website/templates/website/about.html
@@ -1,23 +1,6 @@
 {% extends  'website/base.html' %}
 {% load static %}
 {% block content %}
-<div class="breadcrumb-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="page-title">
-                    <h2>about us</h2>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <nav aria-label="breadcrumb" class="theme-breadcrumb">
-                    <ol class="breadcrumb">
-                    </ol>
-                </nav>
-            </div>
-        </div>
-    </div>
-</div>
 <section class="about-page section-b-space">
     <div class="container">
         <div class="row">
@@ -42,7 +25,7 @@
                     In addition to our comic and novel selection, we also carry a variety of merchandise, such as action
                     figures, posters, and t-shirts, so you can show off your love of your favorite characters.
                 </p>
-<p>
+                <p>
                     We're not just a store, though. We're also a community. Our store hosts regular events, such as
                     author signings, workshops, and cosplay contests, where you can connect with other comic and novel
                     fans and share your passion for the genre.
@@ -69,7 +52,7 @@
                     </svg>
                     <div class="media-body">
                         <h4>free shipping</h4>
-                        <p>free shipping world wide</p>
+                        <p>Only for USA & Canada</p>
                     </div>
                 </div>
             </div>
@@ -94,7 +77,7 @@
                             </g>
                         </svg>
                     <div class="media-body">
-                        <h4>24 X 7 service</h4>
+                        <h4>High Quality Work</h4>
                         <p>online service for new customer</p>
                     </div>
                 </div>
@@ -116,8 +99,9 @@
                               fill="#ff4c3b"></path>
                     </svg>
                     <div class="media-body">
-                        <h4>festival offer</h4>
-                        <p>new online special festival offer</p>
+                        <h4>Full
+                            Transparency</h4>
+                        <p>new online special  offer</p>
                     </div>
                 </div>
             </div>
