--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -63,7 +63,9 @@
                                 <ul>
                                     <li><a href="{% url 'website:privacy' %}">Privacy Policy</a></li>
                                     <li><a href="{% url 'website:cookie' %}">Cookie Policy</a></li>
-                                    <li><a href="{% url 'website:terms' %}">Terms and conditopns</a></li>
+                                    <li><a href="{% url 'website:terms' %}">Terms and conditions</a></li>
+                                    <li><a href="{% url 'website:return_policy' %}">Return Policy</a></li>
+                                    <li><a href="{% url 'website:shipping_policy' %}">Shipping Policy</a></li>
                                     <li><a href="{% url 'website:jobs' %}">Jobs</a></li>
                                 </ul>
                             </div>
