--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -93,7 +93,7 @@
                             <li>
                                 <a href="#"><img alt="" class="mb-4"
                                                  height="100px"
-                                                 src="{% static 'website/logos/stripe-payments-1.png' %}"></a>
+                                                 src="{% static 'website/bg/pay.png' %}"></a>
                             </li>
 
                         </ul>
