--- a/src/website/templates/website/order.html
+++ b/src/website/templates/website/order.html
@@ -63,7 +63,7 @@
                                                 <option value="stripe">Stripe</option>
                                                 <option value="paypal">Paypal</option>
                                             </select>
-                                            <img alt="" src="{% static 'website/images/paypal.png' %}">
+                                            <img alt="" src="{% static 'website/logos/paypal.png' %}">
                                         </div>
                                     </div>
                                 </div>
