--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -15,11 +15,11 @@
                 </div>
                 <div class="col-lg-3 my-3">
                     <ul class="font">
-                        <li><a href="#"><img src="{% static  'website/logos/white_facebook.png' %}" style="width:30px"></i></a></li>
-                        <li><a href="#"><img src="{% static  'website/logos/w_twitter.png' %}" style="width:30px"></i></a></li>
-                        <li><a href="#"><img src="{% static  'website/logos/white_insta.png' %}" style="width:26px"></i></a></li>
-                        <li><a href="#"><img  class="mx-1" src="{% static  'website/logos/white_youtube.png' %}" style="width:30px" ></i></a></li>
-                        <li><a href="#"><img src="{% static  'website/logos/discord_logo.png' %}" style="width:30px" ></i></a></li>
+                        <li><a href="#"><img src="{% static  'website/logos/white_facebook.png' %}" class="mx-1" style="width:30px"></i></a></li>
+                        <li><a href="#"><img src="{% static  'website/logos/w_twitter.png' %}" style="width:30px" class="mx-2"></i></a></li>
+                        <li><a href="#"><img src="{% static  'website/logos/white_insta.png' %}" style="width:26px" class="mx-2"></i></a></li>
+                        <li><a href="#"><img  class="mx-1" src="{% static  'website/logos/white_youtube.png' %}" style="width:30px" class="mx-2"></i></a></li>
+                        <li><a href="#"><img src="{% static  'website/logos/discord_logo.png' %}" style="width:30px" class="mx-2"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 my-3">
