--- a/src/website/templates/website/product_list.html
+++ b/src/website/templates/website/product_list.html
@@ -74,15 +74,15 @@
                                                 {% if products %}
                                                 {% for product in products %}
                                                 <div class="col-xl-3 col-6 col-grid-box">
-                                                    <div class="product-box">
-                                                        <div class="img-wrapper">
+                                                    <div class="product-box" >
+                                                        <div class="img-wrapper" >
                                                             <div class="front">
-                                                                <a href="{% url 'website:product-detail' product.slug %}"><img alt=""
+                                                                <a href="{% url 'website:product-detail' product.slug %}" style="height:400px;"><img alt=""
                                                                                  class="img-fluid blur-up lazyload bg-img"
                                                                                  src="{{product.thumbnail_image.url}}"></a>
                                                             </div>
                                                             <div class="back">
-                                                                <a href="{% url 'website:product-detail' product.slug %}"><img alt=""
+                                                                <a href="{% url 'website:product-detail' product.slug %}"  style="height:400px;"><img alt=""
                                                                                  class="img-fluid blur-up lazyload bg-img"
                                                                                  src="{{product.thumbnail_image.url}}"></a>
                                                             </div>
@@ -93,14 +93,7 @@
                                                                 <a href="{% url 'website:product-detail' product.slug %}">
                                                                     <h6 class="text-center">{{product.name}}</h6>
                                                                 </a>
-                                                                     <div class="text-center">
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
 
-                                        </div>
                                         <h6 class="text-center">{% for price in product.product_version.all %}
                                             ${{price.price}}
                                             &nbsp;&nbsp;&nbsp;
